--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,33 @@
 </head>
 <body>
     <main class="bg">
+        <section class="card">
+            <div class="card-header">
+                <img class="header" src="./images/bg-pattern-card.svg" alt="card header">
+                <img class="user" src="./images/image-victor.jpg" alt="user img">
+
+            </div>
+
+            <h1 class="name"> Victor Crest <span> 26</span></h1>
+            <p class="city">London</p>
+            <div class="line"></div>
+
+            <div class="info">
+                <div>
+                    <p class="info--stats">80K</p>
+                    <p class="info--description">Followers</p>
+                </div>
+                <div>
+                    <p class="info--stats">803K</p>
+                    <p class="info--description">Likes</p>
+                </div>
+                <div>
+                    <p class="info--stats">1.4K</p>
+                    <p class="info--description">Photos</p>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     
